--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -561,4 +561,11 @@
           manually by the user. Off by default, since the expected haptic feedback may not be
           available on some devices. -->
     <bool name="config_enableHapticTextHandle">true</bool>
+
+    <!-- List supported color modes. --> 
+     <integer-array name="config_availableColorModes">
+           <item>0</item> <!-- COLOR_MODE_NATURAL -->
+           <item>1</item> <!-- COLOR_MODE_BOOSTED -->
+                            </integer-array>
+
 </resources>
