--- a/XiaomiParts/res/xml/preferences_xiaomi_parts.xml
+++ b/XiaomiParts/res/xml/preferences_xiaomi_parts.xml
@@ -64,16 +64,34 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="engmode"
+        android:title="@string/engmode">
+
+        <Preference
+            android:icon="@drawable/ic_engmode"
+            android:title="@string/engmode_title"
+            android:summary="@string/engmode_summary">
+
+            <intent
+                android:targetPackage="com.mediatek.engineermode"
+                android:action="android.intent.action.MAIN"
+                android:targetClass="com.mediatek.engineermode.EngineerMode" />
+
+        </Preference>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="misc"
         android:title="@string/misc_title">
-		
+
         <com.redmi.xiaomiparts.preferences.SecureSettingListPreference
             android:defaultValue="0"
             android:key="codecs"
             android:icon="@drawable/ic_codecs"
             android:title="@string/codecs_title"
-			android:summary="@string/codecs_summary"
-			android:dialogTitle="@string/codecs_dialogTitle"
+            android:summary="@string/codecs_summary"
+            android:dialogTitle="@string/codecs_dialogTitle"
             android:entries="@array/codecs_profiles"
             android:entryValues="@array/codecs_values" />
         
